<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAccount"
        android:layout_below="@+id/txtAccount"
        android:background="@drawable/editbox_background"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:hint="@string/userhint"
        android:ems="20">
    	
    	<requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAccount"
        android:layout_below="@+id/editAccount"
        android:layout_marginTop="20dip"
        android:text="@string/pwd"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAccount"
        android:layout_alignRight="@+id/editAccount"
        android:layout_below="@+id/txtPwd"
        android:layout_marginTop="10dip"
        android:background="@drawable/editbox_background"
        android:ems="20"
        android:inputType="textPassword" >
        
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/buttonstate"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forget"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/imageFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editPwd"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/follow"
        android:src="@drawable/ic_facebook" />
</RelativeLayout>